# cmake_cpp_template_prj

./: .ycm_extra_conf.py  CMakeLists.txt  INSTALL  LICENSE  Makefile  README  README.md
doc/: CMakeLists.txt  Doxyfile.in
misc/cmake/: AdditionalLibs.cmake  CPackTargets.cmake  CTestTargets.cmake
src/apps/: CMakeLists.txt  prog.cpp
src/include/: config.h.in  strings.h  thelibrary.h
src/lib/: CMakeLists.txt  thelibrary.cpp
src/tests/: CMakeLists.txt  test_strings.cpp  test_thelibrary.cpp
